--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
-#top{
-    background-color: aliceblue;
+#body{text-align: center;
+}
+
+h5{
+    color: rgb(6, 6, 139);
+}
+#education{
+    background-color: rgb(233, 227, 227);
+}
+#green{
+    background-color: rgb(169, 236, 180);
+}
+#blue{
+    background-color: rgb(187, 227, 243);
 }
